# mistral-vibe

./: AGENTS.md  CHANGELOG.md  pyproject.toml
distribution/zed/: extension.toml
scripts/: bump_version.py
tests/: conftest.py  test_agent_auto_compact.py  test_agent_backend.py  test_agent_observer_streaming.py  test_agent_tool_call.py  test_agents.py  test_cli_programmatic_preload.py  test_deferred_init.py  test_reasoning_content.py  test_system_prompt.py  test_turn_summary.py
tests/acp/: conftest.py  test_acp.py  test_acp_hooks.py  test_close_session.py  test_commands.py  test_fork_session.py  test_initialize.py  test_load_session.py  test_new_session.py  test_session.py  test_set_config_option.py  test_set_mode.py  test_telemetry_notification.py  test_usage_update.py
tests/autocompletion/: test_slash_command_controller.py  test_ui_chat_autocompletion.py
tests/backend/: test_anthropic_adapter.py  test_openai_responses_adapter.py
tests/backend/data/: openai_responses.py
tests/banner/: test_banner_initial_state.py
tests/cli/: test_cache.py  test_clipboard.py  test_commands.py  test_copy_command.py  test_copy_shortcuts.py  test_feedback_bar.py  test_feedback_bar_manager.py  test_mcp_app.py  test_programmatic_setup.py  test_stderr_guard.py  test_ui_config_and_model_picker.py  test_ui_skill_dispatch.py  test_ui_teleport_availability.py
tests/cli/plan_offer/: test_decide_plan_offer.py
tests/cli/textual_ui/: test_completion_popup.py  test_event_handler_hooks.py  test_quit_confirmation.py
tests/core/: test_config_field.py  test_config_layer.py  test_config_resolution.py  test_config_schema.py  test_hooks.py  test_merge.py  test_nuage_client.py  test_remote_agent_loop.py  test_scratchpad.py  test_telemetry_send.py  test_teleport_nuage.py  test_teleport_service.py
tests/core/nuage/: test_remote_events_source.py  test_workflows_client.py
tests/core/session/: test_session_id.py
tests/e2e/: common.py  test_cli_tui_hooks.py  test_cli_tui_session_exit.py  test_cli_tui_streaming.py  test_cli_tui_tool_approval.py
tests/onboarding/: test_ui_onboarding.py
tests/session/: test_resume_sessions.py  test_session_loader.py
tests/skills/: test_builtin_sync.py  test_manager.py  test_models.py  test_parser.py
tests/snapshots/: conftest.py  test_ui_snapshot_config_app.py  test_ui_snapshot_feedback_bar.py  test_ui_snapshot_mcp_command.py  test_ui_snapshot_teleport.py
tests/stubs/: fake_backend.py  fake_connector_registry.py  fake_mcp_registry.py
tests/tools/: test_bash.py  test_connectors.py  test_granular_permissions.py  test_mcp.py  test_mcp_sampling.py  test_scratchpad_permissions.py  test_skill.py
tests/update_notifier/: test_filesystem_update_cache_repository.py
vibe/: __init__.py  whats_new.md
vibe/acp/: acp_agent_loop.py  entrypoint.py  exceptions.py  session.py  utils.py
vibe/acp/commands/: registry.py
vibe/cli/: cache.py  cli.py  clipboard.py  commands.py  entrypoint.py  stderr_guard.py  terminal_detect.py
vibe/cli/autocompletion/: slash_command.py
vibe/cli/narrator_manager/: narrator_manager.py
vibe/cli/plan_offer/: decide_plan_offer.py
vibe/cli/textual_ui/: app.py  app.tcss  quit_manager.py
vibe/cli/textual_ui/handlers/: event_handler.py
vibe/cli/textual_ui/remote/: remote_session_manager.py
vibe/cli/textual_ui/widgets/: config_app.py  feedback_bar.py  feedback_bar_manager.py  loading.py  mcp_app.py  messages.py  narrator_status.py  path_display.py  teleport_message.py  thinking_picker.py
vibe/cli/turn_summary/: port.py  tracker.py
vibe/cli/update_notifier/adapters/: filesystem_update_cache_repository.py
vibe/core/: agent_loop.py  middleware.py  output_formatters.py  programmatic.py  scratchpad.py  system_prompt.py  trusted_folders.py  types.py
vibe/core/agents/: models.py
vibe/core/autocompletion/: completers.py
vibe/core/config/: __init__.py  _settings.py  layer.py  schema.py
vibe/core/config/harness_files/: _harness_manager.py
vibe/core/hooks/: config.py  executor.py  manager.py  models.py
vibe/core/llm/: exceptions.py  format.py
vibe/core/llm/backend/: anthropic.py  generic.py  openai_responses.py
vibe/core/nuage/: client.py  remote_events_source.py  remote_workflow_event_translator.py
vibe/core/paths/: __init__.py  _vibe_home.py
vibe/core/session/: resume_sessions.py  session_id.py  session_loader.py  session_logger.py
vibe/core/skills/: manager.py  models.py  parser.py
vibe/core/skills/builtins/: __init__.py  vibe.py
vibe/core/telemetry/: build_metadata.py  send.py  types.py
vibe/core/teleport/: nuage.py  teleport.py  types.py
vibe/core/tools/: base.py  manager.py  mcp_sampling.py  mcp_settings.py  utils.py
vibe/core/tools/builtins/: bash.py  grep.py  skill.py  (+4 more)
vibe/core/utils/: __init__.py  async_subprocess.py  merge.py
vibe/setup/onboarding/: __init__.py  context.py
(+10 files in other folders)
